--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 <br>Currently I'm working in Saiful Tech Lab as a Front-End
                 Engineer .
             </p>
+
+
+            <p>There should be new rule</p>
         </div>
         <hr>
         <div class="skills">
